--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Um jogo divertido de estourar balões, com score e outras funcionalidades!!">
     <title>Jogo Balões</title>
 </head>
 <body>
